--- a/scoreboard.html
+++ b/scoreboard.html
@@ -17,7 +17,7 @@
             <button class="scoreBtn" onclick="threePoint()">+3</button>
             </div>
             <div>
-                <h1 class="head">Guest</h1>
+                <h1 class="head">Away</h1>
                 <h2 class="score" id="awayScore">0</h2>
                 <button id="oneScore" class="scoreBtn" onclick="onePoint2()">+1</button>
                 <button class="scoreBtn" onclick="twoPoint2()">+2</button>
